feat: Integrate OpenLibrary for rich book data and add book APIs
This commit introduces a major feature enhancement by integrating the OpenLibrary API to fetch and store detailed book information. A new BookService and BookController have been added to expose endpoints for searching, retrieving, and creating books from OpenLibrary using an ISBN.

Key changes:

OpenLibrary Integration: A new OpenLibraryService fetches rich book data, including authors, categories, descriptions, and cover images.
New Book APIs: The BookController now provides endpoints to get books with pagination and filtering, retrieve a single book by its ID, and create a new book from an ISBN.
Database and Entities: The BookMeta entity has been updated to store the enriched data, and repositories have been enhanced with new query methods. getOrCreate logic has been added for authors and categories to prevent duplicates.
Configuration: Added OpenAPIConfig for Swagger documentation and RestTemplateConfig for making HTTP requests. The security configuration has been updated to expose the new book and Swagger endpoints.
DTOs: New DTOs have been created to handle the data from OpenLibrary and to format the responses for the new book APIs.
Testing: Test files have been updated to reflect the new API endpoints. (Profile)